Added nuget package properties

--- a/src/Diwire.Container/Diwire.Container.csproj
+++ b/src/Diwire.Container/Diwire.Container.csproj
@@ -3,6 +3,18 @@
   <PropertyGroup>
     <TargetFramework>netstandard1.0</TargetFramework>
   </PropertyGroup>
+  <PropertyGroup>
+    <PackageId>Diwire.Container</PackageId>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Version>0.0.1-alpha</Version>
+    <PackageProjectUrl>https://github.com/crehmann/Diwire</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/crehmann/Diwire</RepositoryUrl>
+    <PackageTags>DI, IoC</PackageTags>
+    <Copyright>Copyright © Christoph Rehmann 2019</Copyright>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <Company />
+    <Authors>crehmann</Authors>
+  </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Diwire.Abstraction\Diwire.Abstraction.csproj" />
