--- a/src/Diwire.Generation.Roslyn.Analyzer/Diwire.Generation.Roslyn.Analyzer/Diwire.Generation.Roslyn.Analyzer.csproj
+++ b/src/Diwire.Generation.Roslyn.Analyzer/Diwire.Generation.Roslyn.Analyzer/Diwire.Generation.Roslyn.Analyzer.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -8,18 +8,15 @@
 
   <PropertyGroup>
     <PackageId>Diwire.Generation.Roslyn.Analyzer</PackageId>
-    <PackageVersion>1.0.0.0</PackageVersion>
-    <Authors>Christoph</Authors>
-    <PackageLicenseUrl>http://LICENSE_URL_HERE_OR_DELETE_THIS_LINE</PackageLicenseUrl>
-    <PackageProjectUrl>http://PROJECT_URL_HERE_OR_DELETE_THIS_LINE</PackageProjectUrl>
-    <PackageIconUrl>http://ICON_URL_HERE_OR_DELETE_THIS_LINE</PackageIconUrl>
-    <RepositoryUrl>http://REPOSITORY_URL_HERE_OR_DELETE_THIS_LINE</RepositoryUrl>
-    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <Description>Diwire.Generation.Roslyn.Analyzer</Description>
-    <PackageReleaseNotes>Summary of changes made in this release of the package.</PackageReleaseNotes>
-    <Copyright>Copyright</Copyright>
-    <PackageTags>Diwire.Generation.Roslyn.Analyzer, analyzers</PackageTags>
-    <NoPackageAnalysis>true</NoPackageAnalysis>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Version>0.0.1-alpha</Version>
+    <PackageProjectUrl>https://github.com/crehmann/Diwire</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/crehmann/Diwire</RepositoryUrl>
+    <PackageTags>DI, IoC</PackageTags>
+    <Copyright>Copyright © Christoph Rehmann 2019</Copyright>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <Company />
+    <Authors>crehmann</Authors>
   </PropertyGroup>
 
   <ItemGroup>
