Added unit tests for DiwireContainer and did some refactoring in project structure

--- a/src/Diwire.Generation.Roslyn.Analyzer/Diwire.Generation.Roslyn.Analyzer/Diwire.Generation.Roslyn.Analyzer.csproj
+++ b/src/Diwire.Generation.Roslyn.Analyzer/Diwire.Generation.Roslyn.Analyzer/Diwire.Generation.Roslyn.Analyzer.csproj
@@ -17,6 +17,9 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <Company />
     <Authors>crehmann</Authors>
+    <files>
+      <file src="Build\Company.Roslyn.dll" target="analyzers\dotnet\cs" />
+    </files>
   </PropertyGroup>
 
   <ItemGroup>
