--- a/src/Diwire.Analyzers/Diwire.Analyzers/Diwire.Analyzers.csproj
+++ b/src/Diwire.Analyzers/Diwire.Analyzers/Diwire.Analyzers.csproj
@@ -8,7 +8,7 @@
 
   <PropertyGroup>
     <PackageId>Diwire.Analyzers</PackageId>
-    <Version>0.0.3-alpha</Version>
+    <Version>0.1.0-alpha</Version>
     <Description>Diwire.Analyzers</Description>
     <PackageProjectUrl>https://github.com/crehmann/Diwire</PackageProjectUrl>
     <RepositoryUrl>https://github.com/crehmann/Diwire</RepositoryUrl>
@@ -18,6 +18,8 @@
     <Company />
     <Authors>crehmann</Authors>
     <NoPackageAnalysis>true</NoPackageAnalysis>
+    <AssemblyVersion>0.1.0.0</AssemblyVersion>
+    <FileVersion>0.1.0.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
