--- a/src/Diwire.Abstraction/Diwire.Abstraction.csproj
+++ b/src/Diwire.Abstraction/Diwire.Abstraction.csproj
@@ -6,7 +6,7 @@
   <PropertyGroup>
     <PackageId>Diwire.Abstraction</PackageId>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>0.0.3-alpha</Version>
+    <Version>0.1.0-alpha</Version>
     <PackageProjectUrl>https://github.com/crehmann/Diwire</PackageProjectUrl>
     <RepositoryUrl>https://github.com/crehmann/Diwire</RepositoryUrl>
     <PackageTags>DI, IoC</PackageTags>
@@ -14,6 +14,8 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <Company />
     <Authors>crehmann</Authors>
+    <AssemblyVersion>0.1.0.0</AssemblyVersion>
+    <FileVersion>0.1.0.0</FileVersion>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\Diwire.Analyzers\Diwire.Analyzers\Diwire.Analyzers.csproj" />
