--- a/src/Tests/Diwire.Analyzers.Test/Diwire.Analyzers.Test.csproj
+++ b/src/Tests/Diwire.Analyzers.Test/Diwire.Analyzers.Test.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Diwire.Abstraction\Diwire.Abstraction.csproj" />
     <ProjectReference Include="..\..\Diwire.Analyzers\Diwire.Analyzers\Diwire.Analyzers.csproj" />
   </ItemGroup>
 
